--- a/src/app/base.css
+++ b/src/app/base.css
@@ -55,7 +55,8 @@
 *::after {
   box-sizing: border-box;
   margin: 0;
-  font-weight: normal;
+  font-weight: 400;
+  font-family: 'Rubik', sans-serif;
 }
 
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
@@ -66,7 +67,6 @@ html {
 
 body {
   margin: 0;
-  font-family: 'Rubik', sans-serif;
 }
 
 main {
